Sprite 숫자출력작업중-1
- Sprite로 잔상제거함
- 소수점 1자리 까지 정리함

--- a/README.org
+++ b/README.org
@@ -62,3 +62,13 @@ tft.drawString(" F", tft.drawNumber(val, 10, 20) + 10, 20);
   tft.drawString(str, x, y)
 
 #+end_src
+* SPI channel
+- SPI 종류별 핀맵
+    | NAME   | SPI2 | SPI3 |
+    | ----   | ---- | ---- |
+    | CS     |   15 |    5 |
+    | CLK    |   14 |   18 |
+    | MISO   |   12 |   19 |
+    | MOSI   |   13 |   23 |
+    | QUADWP |    2 |   23 |
+    | QUADHD |    4 |   21 |
